# Embedded-C-CPP

./: .gitmodules  Makefile  NVIDIA_interview  README.md  a.out  linkedlist.c  main.c  main2  main2.c  process_learn  process_learn.c  pthread_learn  pthread_learn.c  pthread_race_cond  pthread_race_cond.c  test.c  test.txt  tree.c  write_test  write_test.c
CPP/: Test.cpp  constant.cpp  funcpointer  funcpointer.cpp  main  prog
CPP_Ubuntu/: a.out  derefence  derefence.cpp  dsa1.cpp  dsa2  dsa2.cpp  null  null.cpp  test  test.cpp
RTOS_PThreads_Sess/: CMakeLists.txt  Mutex_Sync  Mutex_Sync.c  Thread_Attr  Thread_Attr.c  prj.conf  process_creation  process_creation.c  thread_creation  thread_creation.c
RTOS_PThreads_Sess/src/: Zephyr_Attr.c  Zephyr_Sync.c  Zephyr_Thread_Creation.c
compilation_stages_understanding/: main.i  main.s
interview_learnings/: CountOnes_TI_interview  CountOnes_TI_interview.c  Memcpy_impl_TI_F2F  Memcpy_impl_TI_F2F.c  NVIDIA_interview  NVIDIA_interview.c  NVIDIA_interview_2  NVIDIA_interview_2.c  dsa.c  interview_qualcomm  interview_qualcomm_2.c  qualcomm_array_question
network-programming/: a.out  client  client.c  cov-report.csv  cov-report.json  json_to_csv.py  webserver  webserver.c
practize_C/: .ex11.c.swp  1  AES_430.c  Makefile  Pthread  Pthread.c  Thread_lehren  Thread_lehren.c  array_pointer  array_pointer.c  checker  checker.c  dennis_bitwise  dennis_bitwise.c  dennis_main  dennis_main.c  ex11  ex11.c  ex13  ex13.c  ex3  ex3.c  getbit  getbit.c  interview  interview.c  interview_prep1  interview_prep1.c  interview_prep2  (+24 more)
(+82 files in other folders)
